--- a/Lab 4/lab4.html
+++ b/Lab 4/lab4.html
@@ -22,21 +22,16 @@ Lab 4
       <li>apple.com</li>
     </ol>
     <br>
+
     <div class="row">
       <div class="column">
         <h2>Column 1</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec tortor at dolor lacinia fermentum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam sit amet quam urna. Phasellus faucibus efficitur interdum. Praesent tincidunt ligula sed molestie vulputate. Morbi vehicula arcu id mi interdum porta. Aenean dolor eros, bibendum non euismod ac, rhoncus at mi. Morbi mollis nunc tempus lectus gravida cursus. Nulla non velit sed neque molestie elementum. Duis quis pretium augue. Etiam vitae euismod nunc. Nulla id interdum massa. Suspendisse vehicula nisl urna, vel placerat justo aliquet a. Curabitur porta sapien id dignissim elementum. Fusce placerat.</p>
       </div>
-
       <div class="column">
         <h2>Column 2</h2>
-        <p id="green">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec tortor at dolor lacinia fermentum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam sit amet quam urna. Phasellus faucibus efficitur interdum. Praesent tincidunt ligula sed molestie vulputate. Morbi vehicula arcu id mi interdum porta. Aenean dolor eros, bibendum non euismod ac, rhoncus at mi. Morbi mollis nunc tempus lectus gravida cursus. Nulla non velit sed neque molestie elementum. Duis quis pretium augue. Etiam vitae euismod nunc. Nulla id interdum massa. Suspendisse vehicula nisl urna, vel placerat justo aliquet a. Curabitur porta sapien id dignissim elementum. Fusce placerat.</p>
       </div>
-
     </div>
 
-    <div>
-      <button type="button" name="Hello" onclick="onClickHello()">Hello</button>
-      <button type="button" name="changeColour" onclick="changeColours()">Change background color</button>
-    </div>
     </html>
