add current date script

--- a/Lab 4/lab4.html
+++ b/Lab 4/lab4.html
@@ -9,7 +9,15 @@ Lab 4
   <script src="scripts.js"></script>
   <title>SET08101 - Lab4</title >
   </head>
+
   <body id="body">
+    <p id="date"></p>
+
+    <script>
+      var d = new Date();
+      document.getElementById("date").innerHTML = d;
+    </script>
+
     <h1>Web Tech is a module that is run in the School of Computing at Edinburgh
       Napier University</h1>
     </body>
